empirical findings update

--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -137,7 +137,7 @@
 @book{Ha41,
   author    = {Hayek, F. A. and Caldwell, Bruce},
   editor    = {White, Lawrence H.},
-  title     = {{The Pure Theory of Capital}},
+  title     = {The Pure Theory of Capital},
   publisher = {University of Chicago Press},
   year      = 1941,
   month     = {January},
@@ -302,6 +302,55 @@
   journal   = {The American Economic Review},
   pages     = {811--824},
   year      = {1973},
+  publisher = {JSTOR}
+}
+
+@article{OsePap17,
+  author   = {Osotimehin, Sophie and Pappadà, Francesco},
+  title    = {Credit Frictions and The Cleansing Effect of Recessions},
+  journal  = {The Economic Journal},
+  volume   = {127},
+  number   = {602},
+  pages    = {1153-1187},
+  doi      = {https://doi.org/10.1111/ecoj.12319},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecoj.12319},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecoj.12319},
+  abstract = {Recessions are conventionally considered as times when the least productive firms are driven out of the market. How do credit frictions affect this cleansing effect of recessions? We build and calibrate a model of firm dynamics with credit frictions and endogenous entry and exit to investigate this question. We find that there is a cleansing effect of recessions in the presence of credit frictions, despite their effect on the selection of exiting and entering firms. This result holds true regardless of the nature of the recession: average firm-level productivity rises following a negative aggregate productivity shock, as well as following a negative financial shock.},
+  year     = {2017}
+}
+@article{FosHal16,
+  author   = {Foster, Lucia and Grim, Cheryl and Haltiwanger, John},
+  title    = {Reallocation in the Great Recession: Cleansing or Not?},
+  journal  = {Journal of Labor Economics},
+  volume   = {34},
+  number   = {S1},
+  pages    = {S293-S331},
+  year     = {2016},
+  doi      = {10.1086/682397},
+  url      = { 
+              
+              https://doi.org/10.1086/682397
+              
+              
+              
+              },
+  eprint   = { 
+              
+              https://doi.org/10.1086/682397
+              
+              
+              
+              },
+  abstract = { The high pace of reallocation across producers is pervasive in the US economy. Evidence shows that this high pace of reallocation is closely linked to productivity. While these patterns hold on average, the extent to which the reallocation dynamics in recessions are “cleansing” is an open question. We find that downturns prior to the Great Recession are periods of accelerated reallocation even more productivity enhancing than reallocation in normal times. In the Great Recession, we find that the intensity of reallocation fell rather than rose and that the reallocation that did occur was less productivity enhancing than in prior recessions. }
+}
+
+@article{baily1992productivity,
+  title     = {Productivity dynamics in manufacturing plants},
+  author    = {Baily, Martin Neil and Hulten, Charles and Campbell, David and Bresnahan, Timothy and Caves, Richard E},
+  journal   = {Brookings papers on economic activity. Microeconomics},
+  volume    = {1992},
+  pages     = {187--267},
+  year      = {1992},
   publisher = {JSTOR}
 }
 
