--- a/literature/theory/theory.tex
+++ b/literature/theory/theory.tex
@@ -503,9 +503,223 @@ durations tend to extend during economic recessions lends credence to this argum
 leisure, most sectors shadow the movements of aggregate GDP. Thus, if productivity-enhancing activities (PEAs) are to
 occur during recessions, the resource reallocation process must predominantly unfold within firms themselves. 
 
-One notable deviation might be labor reallocation. As demonstrated by Davis and Haltiwanger, job destruction exhibits a more countercyclical pattern compared to job creation. Viewing job reallocation through the lens of both destruction and creation suggests a countercyclical trend, positing job reallocation as an investment in cultivating superior firm-worker matches, thereby sowing the seeds for heightened productivity in the future. Davis and Haltiwanger further postulate, within the framework of a model featuring a representative agent, that economic recessions present an optimal window for labor reallocation, highlighting a strategic dimension to workforce management during downturns that might ultimately contribute to long-term productivity gains.
+One notable deviation might be labor reallocation. As demonstrated by \cite{DavHalt92}, job destruction exhibits a
+more countercyclical pattern compared to job creation. Viewing job reallocation through the lens of both destruction and
+creation suggests a countercyclical trend, positing job reallocation as an investment in cultivating superior
+firm-worker matches, thereby sowing the seeds for heightened productivity in the future. \cite{DavHalt92}further
+postulate, within the framework of a model featuring a representative agent, that economic recessions present an optimal
+window for labor reallocation, highlighting a strategic dimension to workforce management during downturns that might
+ultimately contribute to long-term productivity gains. 
  
-\section[short]{Theoretical framework}
+The "lame ducks" theory, initially proposed by \cite{CabHarm94}, offers an intriguing perspective on
+recessions as mechanisms that phase out less profitable, outdated capital. This theory delineates how the destruction of
+older units during downturns is more pronounced than the construction of new ones, characterizing recessions as periods
+marked by the systematic elimination of obsolete capital, hence the moniker "lame ducks" theory. Notably, this framework
+sheds light on observations documented by \cite{DavHalt92}, positioning it as a prominent theoretical
+approach that will be delved into more thoroughly in subsequent discussions. 
+
+Despite its insights, this model lacks consideration of the financial dimensions of firms, an aspect addressed by the
+theoretical work of \cite{OsePap17}. Their research weaves the financial decision-making process into the
+broader context of intertemporal capital decisions, highlighting how financial frictions influence the lender's
+participation constraint. The study reveals that, despite financial frictions, the cleansing effect of recessions on
+productivity persists, potentially leading to a more pronounced productivity surge during expansion phases. This
+analysis serves as a pivotal foundation for the new theoretical framework introduced in this thesis, marking a
+significant departure from traditional views and emphasizing the multifaceted impact of recessions on firm productivity
+and economic recovery. 
+
+In the forthcoming sections, we will delve into the empirical evidence presented by \cite{DavHalt92} in their
+seminal works from 1990 and 1992, which lay the groundwork for our discussion. Following this, we will explore the
+theoretical underpinnings that form the basis of the new, streamlined theoretical framework introduced in this thesis.
+Our examination begins with the insights of \cite{CabHarm94}, focusing on the interplay between the
+destruction and creation margins in economic cycles. Subsequently, we will delve into the work of \cite{OsePap17}
+(2017), which sheds light on the financial dimensions, particularly how capital lending frictions can precipitate
+misallocations. These studies collectively inform the development of our theoretical framework, setting the stage for a
+comprehensive analysis of economic dynamics and firm behavior during recessions. 
+
+\section{Emprical findings}
+
+
+To rephrase the introduction while adhering to your guidelines:
+
+This analysis juxtaposes two pivotal studies that dissect business cycle dynamics through the lens of labor market
+fluctuations and job reallocation. The first, by \cite{DavHalt92}, scrutinizes job reallocation during
+recessions, employing data from the U.S. manufacturing sector. The second study, by \cite{BlaDia90},
+concentrates on labor flows throughout business cycles. Both studies utilize labor data from the Current Population
+Survey (1968-1986) and manufacturing data from the Federal Bureau of Labor Statistics up to 1981, later complemented by
+the Longitudinal Research Database. These works collectively illuminate the dynamic interplay of job creation and
+destruction, offering a nuanced understanding of labor market volatility and its implications for economic cycles.
+Further exploration will include an analysis of Haltiwanger's findings and their application to understanding
+the Great Recession's impact on the labor market in his paper \cite{FosHal16}
+\subsection{Reallocation cleansing or not?}
+This study meticulously investigates the variance in employment changes at the establishment level within the U.S.
+manufacturing sector from 1972 to 1986, focusing on the gross creation and destruction of jobs and the rate of job
+reallocation across plants. Leveraging an extensive dataset from the Annual Survey of Manufactures, it provides a
+detailed examination of how job and worker reallocation contribute to understanding employment dynamics and the cyclical
+nature of the labor market. The findings reveal significant rates of job turnover within specific industry sectors and
+elucidate the relationship between job reallocation and various plant characteristics such as age, size, and ownership
+type. Moreover, the research discusses the persistence and concentration of job creation and destruction, highlighting
+their implications for long-term employment trends and worker mobility. Through analyzing the interplay between
+establishment-level job flows and broader labor market states, this paper contributes valuable insights into the
+mechanisms of labor reallocation and the structural factors driving employment heterogeneity in the manufacturing
+sector. 
+
+The key concept behind the \cite{DAvHalt90,DavHalt92} studies is that measure of reallocation is given by the sum of job
+or capital creation and distruction. In first place lets get some definitons that are used in the paper:
+The analysis in this paper establishes a straightforward link between the gross job flow metrics and the size-weighted
+distribution of establishment growth rates. Gross job creation is determined by aggregating employment increases in both
+growing and newly established firms within a sector. In a similar vein, gross job destruction is assessed by totaling
+employment declines in contracting and ceasing operations. This methodological approach allows for a comprehensive
+evaluation of employment dynamics, highlighting the pivotal role of establishment size and growth in understanding
+sectoral labor market fluctuations. 
+To measure Total Factor Productivity (TFP) at the establishment level, they construct an index following the methodology
+similar to \cite{baily1992productivity} and subsequent studies. The formula for the index is:  
+
+\[ \ln(\text{TFP}_{et}) = \ln(Q_{et}) - a_K\ln(K_{et}) - a_L\ln(L_{et}) - a_M\ln(M_{et}) \]
+
+In this equation, \(Q\) represents real output, \(K\) stands for real capital, \(L\) denotes labor input, and \(M\)
+signifies real materials used, with \(a\) representing the factor elasticities. The subscript \(e\) refers to individual
+establishments, while \(t\) denotes time, allowing for a dynamic analysis of productivity changes across establishments. 
+The methodology for measuring Total Factor Productivity (TFP) at the establishment level involves detailed component
+measurements. Nominal output is calculated by summing total shipments with inventory
+changes, adjusted by industry-specific deflators from the NBER-CES Manufacturing Industry Database. Capital is
+quantified using the perpetual inventory method for structures and equipment, while labor input comprises total hours
+worked by both production and nonproduction workers. Materials, including physical materials and energy, are measured
+and deflated by industry-specific indices, with all values expressed in 1997 constant dollars. Factor elasticities are
+determined using industry-level cost shares, with adjustments made to account for industry differences in TFP
+calculations, ensuring comparisons control for sectoral disparities. 
+The first question they try to address is Did Reallocation Dynamics Change in the great recession?
+\begin{figure}
+    \centering
+    \includegraphics[scale = 0.6]{Plot1.1.png}
+    \caption{Figure Job ﬂows and the business cycle. Authors' calculations using Business
+    Dynamics Statistics (annual), Business Employment Dynamics (quarterly), and
+    the Current Population Survey. Cycle is the change in the unemployment rate.
+    }
+    \label{plot:1.1}
+\end{figure}
+The graph also depicts the fluctuations in the unemployment rate, clearly demonstrating that periods of rising
+unemployment are typically marked by increased job losses and decreased job creation. However, the trend took a notable
+turn during the Great Recession. Specifically, while job losses did surge in the 2008-2009 period, the most remarkable
+change was the significant drop in job creation beginning in 2007 and extending through 2010. Additionally, there is an
+observable long-term decline in job flow dynamics, a topic for further discussion. 
+
+To corroborate these findings and delve into more granular data, they utilized the Business Employment Dynamics (BED)
+statistics for the U.S. private sector. The BED's quarterly data from the second quarter of 1990 to the first quarter of
+2012 (Panel B of the figure) underscores the annual trends, showing that recessions typically involve higher job
+destruction and lower job creation rates. The period starting in 2007 stands out for a particularly steep decline in job
+creation, a trend that is more pronounced in the BED data. The BED series also highlights that the sluggish recovery
+from the Great Recession up to early 2012 is primarily attributable to weak job creation rather than enduringly high job
+destruction rates. This pattern, confirmed by other datasets such as the Job Openings and Labor Turnover Survey (JOLTS),
+persisted beyond the first quarter of 2012. 
+
+Adding to this, job creation during the Great Recession was as low as it has been at any time in the past 30 years, as
+illustrated in the figure. Moreover, job reallocation (the sum of job creation and destruction) reached its lowest point
+in 30 years during the Great Recession and its immediate aftermath. When comparing the Great Recession to the early
+1980s recession, the rate of job reallocation was 28\% in 2009, in stark contrast to 35\% in 1983 (both periods represent
+peaks in job destruction and are measured using March-to-March Business Dynamics Statistics data). These patterns are
+partly driven by significant downward trends in job flows, as evidenced in both the Business Dynamics Statistics (BDS)
+and the BED data. Although exploring the causes of these declining trends in job flows is beyond the scope of this
+analysis, it is clear that these trends are significant and have been taken into account in the analysis. 
+
+Moreover the authors show how the patterns change considerbaly in the great recession, in particularly regarding how the
+creation and distruction rate og jobs respond to the sharp fall in demand. They found as expected from \cite{CabHarm94}
+that the creation rate of new jobs slower before the crisis spread out and than the distruction rate increses when it is
+not possible to fully accommodate the decrease in demand only stopping new labour hiring. They asses that during the
+Great Recession this patterns changes in particularly the fraction of net employment  contraction accounted by a job
+reduction is higeger than 0.5, while for all the previous recession it was way below 0.4 as shown in the table.
+\begin{table}[ht]
+    \centering
+    \caption{
+    Share of Change in Net Employment Growth Due to Change in Job Creation in Periods of Net Contraction}
+
+    \begin{tabular}{lccc}
+    \hline & \multicolumn{2}{c}{ National } & State \\
+    \cline { 2 - 3 } Period & BDS (Annual) & BED (Quarterly) & BDS (Annual) \\
+    \hline Pre-Great Recession & .21 & .28 & .39 \\
+    Post-2007 & .61 & .59 & .65 \\
+    \hline
+    \end{tabular}
+    \label{tab:1.2}
+\end{table}
+
+This analysis is based on the authors' computations using data from the Business Dynamics Statistics (BDS) and Business
+Employment Dynamics (BED). The methodology hinges on the principle that net employment change equals job creation minus
+job destruction. For any period(s) of net employment decrease lasting at least one period, both the total change in net
+employment growth and the total change in job creation are aggregated over the full duration of consecutive net
+contraction periods. Furthermore, these aggregated changes are then further combined within the periods outlined in the
+analysis. The proportion mentioned refers to the fraction of the total aggregated change in net employment growth during
+the specified timeframe that is attributed to the total change in job creation within the same timeframe. Specifically,
+the BDS data spans from 1981 to 2007 for the pre-Great Recession era and from 2008 to 2011 for the post-2007 era. For
+the BED, the pre-Great Recession period covers from the second quarter of 1990 to the third quarter of 2007, and the
+post-2007 era from the fourth quarter of 2007 to the first quarter of 2012. It's important to note that these
+calculations are applied solely to periods experiencing a net decrease in employment growth. For instance, this applies
+to the period from the fourth quarter of 2007 to the first quarter of 2010 for the BED data. Regarding the BDS National
+Annual data, there are six years of net employment contraction, with two of those years occurring after 2007. In the BED
+Quarterly data, there are twenty-two quarters of net contraction, with nine quarters following 2008. For the BDS State
+Annual data, there are 393 state-year instances of net contraction, with 112 of those instances occurring after 2007. 
+
+Another way to see this change in patterns is regressing job creation rate, job destruction rate and Reallocation rate
+to Cyle an iteration between a Great Recession dummy and the cycle and a trend. The results are shown in the table 3.
+\begin{table}
+    \centering
+    \caption{Job Flows and Change in the Unemployment Rate at the State-Level (Annual), 1981-2011}
+    \begin{tabular}{|c|c|c|c|}
+    \hline & \begin{tabular}{l} 
+    Job Creation \\
+    Rate
+    \end{tabular} & \begin{tabular}{c} 
+    Job Destruction \\
+    Rate
+    \end{tabular} & Reallocation Rate \\
+    \hline Cycle & \begin{tabular}{l}
+    $-.631 ***$ \\
+    $(.046)$
+    \end{tabular} & \begin{tabular}{l}
+    $1.194 ***$ \\
+    $(.053)$
+    \end{tabular} & \begin{tabular}{l}
+    $.563 ***$ \\
+    $(.068)$
+    \end{tabular} \\
+    \hline GR $\times$ cycle & \begin{tabular}{l}
+    $-.371 ***$ \\
+    $(.079)$
+    \end{tabular} & \begin{tabular}{l}
+    $-.421^***$ \\
+    $(.079)$
+    \end{tabular} & \begin{tabular}{l}
+    $-.793 ***$ \\
+    $(.128)$
+    \end{tabular} \\
+    \hline Trend & \begin{tabular}{l}
+    $-.168***$ \\
+    $(.010)$
+    \end{tabular} & \begin{tabular}{l}
+    $-.136 ***$ \\
+    $(.011)$
+    \end{tabular} & \begin{tabular}{l}
+    $-.304***$ \\
+    $(.020)$
+    \end{tabular} \\
+    \hline
+    \end{tabular}
+    \footnote{$-N=1,581$. GR is a dummy variable equal to one for years from 2008 to 2010 (job flows from March 2007 to March 2010). Cycle is the state-year change in the unemployment rate. All specifications include state fixed effects. Standard errors in parentheses are clustered at the state level.
+    $$
+     because * \quad p<.01 \text {. }
+    $$}
+    \label{tab:1.2}
+\end{table}
+\begin{figure}
+    \centering
+    \includegraphics[scale = 0.6]{Plot1.2.png}
+    \caption{Job ﬂows by age, 1981-2011. Authors' calculations on Business Dy-
+    namics Statistics. Young is for establishments owned by ﬁrms less than 5 years old.
+    Mature is for establishments owned by ﬁrms 5 or more years old. Job ﬂows are
+    establishment based and are classiﬁed by ﬁrm age characteristics.
+    }
+    \label{plot:1.1}
+\end{figure} 
+\section{\cite{OsePap17}}
 The economy comprises risk-neutral firms with a constant discount rate represented by $0 < \beta < 1$. These firms
 exhibit heterogeneity in productivity and net worth. They employ a production technology that relies solely on capital
 (or production units) as input, featuring diminishing returns to scale.
@@ -937,7 +1151,7 @@ Datasets that closely align with the theoretical CC and DD series have been comp
 lies on the dataset curated by Davis and Haltiwanger, who leverage the Longitudinal Research Database to construct
 quarterly series for U.S. manufacturing plants spanning the period 1972:2-1986:4. 
 
-In their empirical approach, Davis and Haltiwanger utilize output to empirically determine demand, employing the growth
+In their empirical approach, \cite{DavHal94}utilize output to empirically determine demand, employing the growth
 rate of the industrial production index as a proxy for output growth. Notably, in the foundational theoretical model,
 \(Q(r)\) is smoothed by price movement, with the elasticity of demand determining the extent of smoothing, assumed to be
 equal to 1. While the theoretical model maintains a constant consumption-wage, the authors acknowledge that considering
