literature review update

--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -354,3 +354,13 @@
   publisher = {JSTOR}
 }
 
+@article{fort2013firms,
+  title     = {How firms respond to business cycles: The role of firm age and firm size},
+  author    = {Fort, Teresa C and Haltiwanger, John and Jarmin, Ron S and Miranda, Javier},
+  journal   = {IMF Economic Review},
+  volume    = {61},
+  number    = {3},
+  pages     = {520--559},
+  year      = {2013},
+  publisher = {Springer}
+}
