--- a/literature/theory/theory.tex
+++ b/literature/theory/theory.tex
@@ -709,9 +709,44 @@ to Cyle an iteration between a Great Recession dummy and the cycle and a trend. 
     $$}
     \label{tab:1.2}
 \end{table}
+The authors delve into the nuances of state-level job flow dynamics by leveraging the variation in the relationship
+between cyclical economic indicators and job flows across different states. Their methodological approach is rooted in
+conducting descriptive regressions that not only link job flows to a selected cyclical indicator but also incorporate an
+interaction term that captures the distinctive economic conditions of the Great Recession period alongside the cyclical
+variable. To achieve this, they meticulously utilize changes in the unemployment rate at the state level as a proxy for
+economic cycles. Recognizing the persistent negative trend in job flows across the board, the authors judiciously
+incorporate a linear trend into their regression models to adequately account for this overarching pattern. 
+
+The findings from these regressions are illuminating, revealing that cyclical fluctuations predominantly explain a
+substantial portion of the variance observed in job flows, particularly with respect to the job destruction rate. This
+observation is in line with the theoretical framework posited by \cite{CabHarm94}, which suggests that the
+margin of job destruction exhibits a higher sensitivity to cyclical downturns compared to the job creation margin. A
+striking aspect of their analysis is the significant and negative interaction observed between the cyclical variable and
+the Great Recession dummy variable, indicating that this period was characterized by a pronounced decrease in the rate
+of new job openings, whereas the rate of job layoffs was not as severely affected as it had been in other recessions.
+This pattern underscores the profound and distinctive impact of the Great Recession, which led to a dramatic downturn in
+job creation, surpassing the declines observed in job destruction rates and deviating markedly from the trends seen in
+prior economic downturns. 
+
+Furthermore, the analysis sheds light on the behavior of the job reallocation rate during the Great Recession, which, in
+a departure from its traditionally pro-cyclical nature observed in earlier recessions, switched signs, indicating a
+contraction in job reallocation. This reversal is particularly noteworthy as it signifies a shift towards less job
+reallocation, thereby challenging the conventional understanding of job flow dynamics during economic downturns. 
+
+An important contribution to this discourse comes from studies that emphasize the significant role of young businesses
+in the observed decline in job creation rates, particularly highlighted in the research by \cite{fort2013firms}. These young
+businesses, defined as entities with less than five years of operation, exhibit a markedly higher responsiveness in
+their job creation margin, especially in the aftermath of the 2007 financial crisis. This responsiveness is contrasted
+with the behavior of older firms, which, although also experiencing shifts in their job creation and destruction
+margins, do not demonstrate the same level of sensitivity as their younger counterparts. The distinction between young
+and old firms becomes even more pronounced when examining the destruction margin, where young firms again show a greater
+responsiveness, underscoring the differential impact of economic cycles based on firm age. 
+
+The second question that the authors try to adress was: Did Cleansing Effect change in the great recession?
+In order to adress this question the authors focus on analysis if th
 \begin{figure}
     \centering
-    \includegraphics[scale = 0.6]{Plot1.2.png}
+    \includegraphics[scale = 0.54]{Plot1.2.png}
     \caption{Job ﬂows by age, 1981-2011. Authors' calculations on Business Dy-
     namics Statistics. Young is for establishments owned by ﬁrms less than 5 years old.
     Mature is for establishments owned by ﬁrms 5 or more years old. Job ﬂows are
